--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,48 @@
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic");
 
+/* AXES */
+/* ticks */
+.axis line{
+	stroke: #706f6f;
+	stroke-width: 0.5;
+	shape-rendering: crispEdges;
+	}
+	
+	/* axis contour */
+	.axis path {
+	stroke: #706f6f;
+	stroke-width: 0.7;
+	shape-rendering: crispEdges;
+	}
+	
+	/* axis text */
+	.axis text {
+	fill: #2b2929;
+	font-family: Georgia;
+	font-size: 120%;
+	}
+	
+	/* LINE CHART */
+	.line {
+	fill: none;
+	stroke: #d2d2d2;
+	}
+	
+	.ghost-line {
+	fill: none;
+	stroke: #d2d2d2;
+	opacity: 0;
+	stroke-width: 10;
+	}
+	
+	.serie_label {
+	fill: #d2d2d2;
+	font-family: Georgia;
+	font-size: 80%;
+	}
+
+
 /*
 	Strata by HTML5 UP
 	html5up.net | @ajlkn
